<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Order Taken Application</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!-- login screen details -->
    <string name="title_login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <!-- order page -->
    <string name="title_order_page">Add an order details</string>
    <string name="beatname">Beat name</string>
    <string name="shopname">Shop name</string>
    <!-- <string name="cutomername">Customer name</string> -->
    <string name="loadProductList">Load Product List</string>
    <string name="saveOrder">Save Order</string>

    <!-- Order details activity page -->
    <string name="title_activity_order_details">Order Details Activity</string>
    <string name="productname">Product Name</string>
    <string name="instockqty">In Stock</string>
    <string name="orderqty">Order Qty</string>
    <string name="amount">Amount</string>
    <string name="netamount">Net Amount</string>
    <string name="title_activity_main">Dashboard Page</string>
    <string name="title_activity_list_of_orders">ListOfOrders</string>

    <!-- List of Order details activity page -->
    <string name="title_list_order_details">List of orders</string>
    <string name="sno">SNo</string>
    <!-- <string name="ShopName">Shop Name</string> -->
    <string name="OrderNo">Order No</string>
    <string name="OrderedQty">Ordered Qty</string>
    <string name="TotalNetAmount">Total Net Amount</string>
    <string name="title_activity_edit_order_list">EditOrderList</string>
    
    <string name="updateOrder">Update Order</string>

</resources>
