<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
	    android:id="@+id/scroll_view_order_details"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin">
	<RelativeLayout
	    android:id="@+id/relatovelayoutcontent"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    tools:context=".OrderDetailsActivity" >
	    <TextView
	        android:id="@+id/productname"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/productname" />
	    <Spinner
	            android:id="@+id/spinnerProductname"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="10dp" />
	    <TextView
	        android:id="@+id/instock"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/instockqty" />
	    <EditText
	        android:id="@+id/instock"
	        android:layout_width="match_parent"
	        android:inputType="text"
	        android:layout_height="wrap_content" >
    	</EditText>
    	<TextView
	        android:id="@+id/orderqty"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/orderqty" />
	    <EditText
	        android:id="@+id/orderqty"
	        android:layout_width="match_parent"
	        android:inputType="text"
	        android:layout_height="wrap_content" >
    	</EditText>
    	<TextView
	        android:id="@+id/amount"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/amount" />
	    <EditText
	        android:id="@+id/amount"
	        android:layout_width="match_parent"
	        android:inputType="text"
	        android:layout_height="wrap_content" >
    	</EditText>
    	<TextView
	        android:id="@+id/netamount"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/netamount" />
	    <EditText
	        android:id="@+id/netamount"
	        android:layout_width="match_parent"
	        android:inputType="text"
	        android:layout_height="wrap_content" >
    	</EditText>
	    
	    <TableLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textView1"
	        android:layout_below="@+id/textView1"
	        android:layout_marginTop="35dp" >
	
	        <TableRow
	            android:id="@+id/tableRow1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	        </TableRow>
	
	        <TableRow
	            android:id="@+id/tableRow2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	        </TableRow>
	
	        <TableRow
	            android:id="@+id/tableRow3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	        </TableRow>
	
	        <TableRow
	            android:id="@+id/tableRow4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	        </TableRow>
	    </TableLayout>
	
	</RelativeLayout>
</ScrollView>