<!-- <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:text="@string/hello_world"
         />
    

</RelativeLayout> -->
 <!-- <?xml version="1.0" encoding="utf-8"?> -->
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view_login"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<LinearLayout android:id="@+id/content_login"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical" >
	      <!-- Login Title -->
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/title_login"
	        android:gravity="center_horizontal"
	        android:textSize="20dp" 
	        />
	    <!-- Login Image -->
	    <ImageView
	        android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        android:gravity="center_horizontal"
	        android:src="@drawable/ic_launcher"
	        android:layout_weight="1.1"
	        android:padding="20dp"
	        />
	    <!-- layout for Username -->
	    <LinearLayout
	      android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	      android:orientation="horizontal"
	      android:layout_weight="0.01"
	      android:padding="10dp">
	     
	        <TextView
	            android:layout_height="wrap_content"
	            android:layout_width="0dp"
	            android:layout_weight="1.0"
	            android:text="@string/username"
	            android:textSize="18dp"
	            />
	        <EditText
	            android:id="@+id/username"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1.0"
	            android:ems="10"
	            android:inputType="text" >
	
	            <requestFocus />
	        </EditText>
	
	    </LinearLayout>
	    <!-- layout for Password -->
	    <LinearLayout
	            android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	      android:orientation="horizontal"
	      android:layout_weight="0.01"
	      android:padding="10dp"
	      >
	        <TextView
	            android:layout_height="wrap_content"
	            android:layout_width="0dp"
	            android:layout_weight="1.0"
	            android:text="@string/password"
	            android:textSize="18dp"
	            />
	        <EditText
	            android:id="@+id/password"
	            android:layout_height="wrap_content"
	            android:layout_width="0dp"
	            android:layout_weight="1.0"
	            android:inputType="textPassword"
	            />
	    </LinearLayout>
	    <Button
	        android:id="@+id/login"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/login"
	        android:layout_margin="10dp"
	        />
	</LinearLayout>
	
</ScrollView>